@@ -116,7 +116,9 @@ License/Copyright
 =================
 
 Portions by Netscape (c) Copyright 1998 Netscape Communications Corp, Inc.
-Portions by Clayton Donley (c) Copyright 1998 Clayton Donley
+Portions by Clayton Donley (c) Copyright 1998 Clayton Donley.
+Portions by Leif Hedstrom (c) Copyright 1998 Leif Hedstrom.
+
 
 Please read the MPL-1.0.txt file included for information on the Mozilla
 Public License, which covers all files in this distribution.
