@@ -1,5 +1,5 @@
 #!/usr/bin/perl5
-#################################################################################
+#############################################################################
 # $Id$
 #
 # The contents of this file are subject to the Netscape Public License Version
@@ -10,21 +10,24 @@
 # WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License for
 # the specific language governing rights and limitations under the License. 
 #
-# The Initial Developer of the Original Code is Netscape Communications
-# Corporation. Portions created by Netscape are Copyright (C) 1998 Netscape
-# Communications Corporation. All Rights Reserved.
+# The Original Code is PerLDAP. The Initial Developer of the Original
+# Code is Leif Hedstrom and Netscape Communications. Portions created
+# by Leif are Copyright (C) Leif Hedstrom, portions created by Netscape
+# are Copyright (C) Netscape Communications Corp. All Rights Reserved.
+#
+# Contributor(s):
 #
 # SYNOPSIS:
 #    Modify an attribute for one or more entries, or possibly delete it.
 #
 # USAGE:
-#    rand_mods [-adnvW] -b base -h host -D bind DN -w pwd -P cert filter loops
-#		attribute ...
+#    rand_mods [-adnvW] -b base -h host -D bind DN -w pwd -P cert filter
+#	       loops attribute ...
 #
-#################################################################################
+#############################################################################
 
 
-#################################################################################
+#############################################################################
 # Modules we need. Note that we depend heavily on the Ldapp module, 
 # which needs to be built from the C code. It also requires an LDAP SDK.
 #
@@ -37,15 +40,14 @@ use strict;
 no strict "vars";
 
 
-#################################################################################
+#############################################################################
 # Constants, shouldn't have to edit these...
 #
 $APPNAM	= "rand_mods";
 $USAGE	= "$APPNAM [-dnvW] -b base -h host -D bind -w pswd filter loops attr ...";
-$AUTHOR	= "Leif Hedstrom <leif\@netscape.com>";
 
 
-#################################################################################
+#############################################################################
 # Check arguments, and configure some parameters accordingly..
 #
 if (!getopts('adnvWb:h:D:p:s:w:P:'))
@@ -56,7 +58,7 @@ if (!getopts('adnvWb:h:D:p:s:w:P:'))
 %ld = Mozilla::LDAP::Utils::ldapArgs();
 
 
-#################################################################################
+#############################################################################
 # Instantiate an LDAP object, which also binds to the LDAP server.
 #
 if (!getopts('b:h:D:p:s:w:P:'))
@@ -69,7 +71,7 @@ $conn = new Mozilla::LDAP::Conn(\%ld);
 croak "Could't connect to LDAP server $ld{host}" unless $conn;
 
 
-#################################################################################
+#############################################################################
 # Parse some extra argumens
 #
 my $srch, $loop;
@@ -92,7 +94,7 @@ if (! ($loops = shift(@ARGV)))
 $num_attrs = $#attrs;
 
 
-#################################################################################
+#############################################################################
 # Find all the argument
 #
 my $num = 0;
